finish admin panel ui

--- a/client/admin/movie/search.html
+++ b/client/admin/movie/search.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Required meta tags -->
@@ -95,6 +95,7 @@
         <div class="row justify-content-between">
             <div class="col-3">
                 <a class="btn btn-white border border-dark">Add Movie</a>
+                <a class="btn btn-white border border-dark ms-3">Back to List</a>
             </div>
             <div class="col-4">
                 <form onsubmit="window.location = '/Movie/Search/?param=' + search.value; return false;">
