--- a/client/admin/transaction/search.html
+++ b/client/admin/transaction/search.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <!-- Required meta tags -->
@@ -66,28 +66,81 @@
     <div class="container body-content pt-5">
 
         <div class="px-5">
-            <p class="pt-3"><h1>Administrator Panel</h1></p>
+            <p class="pt-3"><h1>Transaction Database</h1></p>
         </div>
 
         <hr />
-        
-        <div class="container px-5">
-            <div class="row justify-content-center" style="height: 400px;">
-                <div class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark">
-           <!-- <div class="col-4 mb-4 text-white bg-secondary bg-gradient shadow rounded-3 m-5 h-100"> -->
-                    <div class="container-fluid py-5">
-                        <h1 class="text-left">Movies</h1>
+
+        <!--
+            @if (ViewBag.Success != null)
+                <div class="row">
+                    <div class="offset-md-4 col-md-4">
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <strong>@ViewBag.Success</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                     </div>
                 </div>
-                
-                <div class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark">
-           <!-- <div class="col-4 mb-4 text-white bg-secondary bg-gradient shadow rounded-3 m-5 h-100"> -->
-                    <div class="container-fluid py-5">
-                        <h1 class="text-left">Transactions</h1>
+            else if (ViewBag.Alert != null)
+                <div class="row d-flex justify-content-between">
+                    <div class="offset-md-4 col-md-4">
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong>@ViewBag.Alert</strong>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                     </div>
                 </div>
+        -->
+
+        <div class="row justify-content-between">
+            <div class="col-auto">
+                <a class="btn btn-white border border-dark">Total Revenue: Rp 0</a>
+				<a class="btn btn-white border border-dark ms-3">Back to List</a>
+            </div>
+            <div class="col-4">
+                <form onsubmit="window.location = '/Trasaction/Search/?param=' + search.value; return false;">
+                    <div class="input-group mb-1">
+                        <input id="search" type="search" name="search" class="form-control border border-dark">
+                        <button type="submit" value="Send" class="btn btn-white border border-dark">Search</button>
+                    </div>
+                </form>
             </div>
         </div>
+
+        <table class="table mt-5">
+            <tr class="text-center">
+                <th style="width: 10%;">ID</th>
+                <th style="width: 20%;">Username</th>
+                <th style="width: 20%;">Title</th>
+                <th style="width: 15%;">Price</th>
+                <th style="width: 30%;">Time of Purchase</th>
+            </tr>
+
+            <tr>
+              <th scope="row" colspan="6" class="text-center p-5">Loading...</th>
+            </tr>
+
+            <!--
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => purchase.Id)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => purchase.Username)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => purchase.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => purchase.Price)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => purchase.Time)
+                    </td>
+                </tr>
+            -->
+
+        </table>
 
     </div>
 
