--- a/client/admin/admin_layout.html
+++ b/client/admin/admin_layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head> 
 <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+    <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Online Cinema</a>
 
@@ -49,12 +49,13 @@
                                 else
                                     @Html.ActionLink("Login", "Login", "Admin", "", new { @class = "btn btn-outline-light" })
 							-->
+                            
                         </a>
                     </div>
                     <div class="mt-1">
                         <div class="input-group mb-1">
-                            <input id="search" placeholder="Administrator" type="search" name="search" class="form-control" disabled>
-                            <button type="submit" value="Send" class="btn btn-danger">Logout</button>
+                            <span class="btn btn-white border border-dark text-center">Administrator</span>
+                            <button type="submit" value="Send" class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
@@ -64,9 +65,14 @@
 
     <div class="container body-content pt-5">
 
-        @RenderBody()
+        <div class="px-5">
+            <p class="pt-3"><h1><!-- Title --></h1></p>
+        </div>
 
-        <hr class="mt-5" />
+        <hr />
+        
+        <!-- Body -->
+
     </div>
 
     <script src=""></script>
