--- a/client/admin/movie/index.html
+++ b/client/admin/movie/index.html
@@ -8,18 +8,12 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Online Cinema</a>
-
-            <!--
-                @if (Session["Admin"] != null)
-                    <h5 class="navbar-text text-light">
-                        <i class="text-secondary">Currently logged in as: </i><b>@Session["Admin"].ToString()</b>
-                    </h5>
-            -->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
@@ -28,34 +22,16 @@
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <div class="navbar-nav me-2 mb-lg-0">
                         <a class="nav-item me-1 mb-1">
-
-                            <!--
-								@Html.ActionLink("Movies", "Index", "Movie", null, new { @class = "btn btn-outline-light" })
-							-->
-
+                        </a>
+                        <a class="nav-item me-1 mb-1"> 
                         </a>
                         <a class="nav-item me-1 mb-1">
-
-                            <!--
-								@Html.ActionLink("Transactions", "Index", "Purchase", null, new { @class = "btn btn-outline-light" })
-							-->
-                            
-                        </a>
-                        <a class="nav-item me-1 mb-1">
-
-                            <!--
-								@if (Session["Admin"] != null)
-                                    @Html.ActionLink("Logout", "Logout", "Admin", "", new { @class = "btn btn-outline-danger" })
-                                else
-                                    @Html.ActionLink("Login", "Login", "Admin", "", new { @class = "btn btn-outline-light" })
-							-->
-                            
                         </a>
                     </div>
                     <div class="mt-1">
                         <div class="input-group mb-1">
                             <span class="btn btn-white border border-dark text-center">Administrator</span>
-                            <button type="submit" value="Send" class="btn btn-white border border-dark">Logout</button>
+                            <button class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
@@ -94,20 +70,20 @@
 
         <div class="row justify-content-between">
             <div class="col-3">
-                <a class="btn btn-white border border-dark">Add Movie</a>
+                <button class="btn btn-white border border-dark">Add Movie</button>
             </div>
             <div class="col-4">
                 <form onsubmit="window.location = '/Movie/Search/?param=' + search.value; return false;">
                     <div class="input-group mb-1">
-                        <input id="search" type="search" name="search" class="form-control border border-dark">
-                        <button type="submit" value="Send" class="btn btn-white border border-dark">Search</button>
+                        <input type="search" class="form-control border border-dark">
+                        <button type="submit" class="btn btn-white border border-dark">Search</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <table class="table mt-5">
-            <tr class="text-center">
+        <table class="table text-center mt-4" id="table">
+            <tr>
                 <th style="width: 15%;">Title</th>
                 <th style="width: 15%;">Director</th>
                 <th style="width: 30%;">Synopsis</th>
@@ -116,47 +92,50 @@
                 <th style="width: 10%;">Action</th>
             </tr>
 
-            <tr>
+            <!-- <tr>
               <th scope="row" colspan="6" class="text-center p-5">Loading...</th>
-            </tr>
+            </tr> -->
 
-            <!--
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Director)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Synopsis)
-                    </td>
-                    <td>
-                        @Html.ValueFor(modelItem => movie.Price)
-                    </td>
-                    <td>
-                        @if (!string.IsNullOrWhiteSpace(movie.PosterPath))
-                        {
-                            <img src="@Url.Content(movie.PosterPath)" style="width:200px; height:auto;" />
-                        }
-                    </td>
-                    <td>
-                        <div>
-                            <a class="btn btn-info mb-1" href="@Url.Action("Edit", "Movie", new { id = movie.Id })">
-                                <img src="~/Content/pencil-square.svg" alt="Edit" width="19" height="19">
-                            </a>
-                            <a class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?')" type="button" href="@Url.Action("Delete", "Movie", new { id = movie.Id, posterPath = movie.PosterPath })">
-                                <img src="~/Content/trash.svg" alt="Delete" width="19" height="19">
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            -->
+            <tr> 
+                <td class="cell-pt">Lorem Ipsum</td>
+                <td class="cell-pt">Consectetur</td>
+                <td class="cell-pt text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</td>
+                <td class="cell-pt">Rp 5,000</td>
+                <td><img style="width:150px; height:auto;" src="https://ae01.alicdn.com/kf/Hda510b54c6f143079a288919fa821cd3p/JAWS-VINTAGE-POSTER-Film-Kanvas-Cetakan-Seni-Dinding-untuk-Ruang-Tamu-Dekorasi-Kamar-Tidur.jpg_Q90.jpg_.webp"></td>
+                <td class="container position-relative">
+                    <div class="col position-absolute top-50 start-50 translate-middle">
+                        <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="showUserEditBox(object['id'])">
+                            <img src="../../../resources/icons/pencil-square.svg" alt="Edit">
+                        </button>
+                        <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="userDelete(object['id'])">
+                            <img src="../../../resources/icons/trash.svg" alt="Delete">
+                        </button>
+                    </div>
+                </td>
+            </tr>
+            <tr> 
+                <td class="cell-pt">Lorem Ipsum</td>
+                <td class="cell-pt">Consectetur</td>
+                <td class="cell-pt text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</td>
+                <td class="cell-pt">Rp 5,000</td>
+                <td><img style="width:150px; height:auto;" src="https://ae01.alicdn.com/kf/Hda510b54c6f143079a288919fa821cd3p/JAWS-VINTAGE-POSTER-Film-Kanvas-Cetakan-Seni-Dinding-untuk-Ruang-Tamu-Dekorasi-Kamar-Tidur.jpg_Q90.jpg_.webp"></td>
+                <td class="container position-relative">
+                    <div class="col position-absolute top-50 start-50 translate-middle">
+                        <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="showUserEditBox(object['id'])">
+                            <img src="../../../resources/icons/pencil-square.svg" alt="Edit">
+                        </button>
+                        <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="userDelete(object['id'])">
+                        <!-- onclick="return confirm('Are you sure you want to delete?')" -->
+                            <img src="../../../resources/icons/trash.svg" alt="Delete">
+                        </button>
+                    </div>
+                </td>
+            </tr>
 
         </table>
 
     </div>
 
-    <script src=""></script>
+    <script src="index.js"></script>
 </body>
 </html>
