movie crud functionalities

--- a/client/admin/movie/add.html
+++ b/client/admin/movie/add.html
@@ -47,7 +47,7 @@
 
         <hr />
 
-		<form action="#" onsubmit="return addData()">
+		<form action="#" onsubmit="addMovie()">
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Title</label>
@@ -81,7 +81,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
-                    <label class="control-label">Price</label>
+                    <label class="control-label">Price (Rp)</label>
                     <input id="price" class="form-control border border-dark" type="number" min="0" required>
                 </div>
                 <div class="col-3 mx-5 my-2">
