--- a/client/admin/movie/edit.html
+++ b/client/admin/movie/edit.html
@@ -47,7 +47,7 @@
 
         <hr />
 
-		<form id="form" action="#" onsubmit="editMovie()">
+		<form id="editForm" action="javascript:void(0)" onsubmit="editMovie()">
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Title</label>
