--- a/client/admin/movie/add.html
+++ b/client/admin/movie/add.html
@@ -47,7 +47,7 @@
 
         <hr />
 
-		<form action="#" onsubmit="addMovie()">
+		<form action="javascript:void(0)" onsubmit="addMovie()">
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Title</label>
