--- a/client/admin/movie/search.html
+++ b/client/admin/movie/search.html
@@ -8,6 +8,7 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
@@ -22,15 +23,15 @@
                     <div class="navbar-nav me-2 mb-lg-0">
                         <a class="nav-item me-1 mb-1">
                         </a>
-                        <a class="nav-item me-1 mb-1">  
+                        <a class="nav-item me-1 mb-1"> 
                         </a>
-                        <a class="nav-item me-1 mb-1">  
+                        <a class="nav-item me-1 mb-1">
                         </a>
                     </div>
                     <div class="mt-1">
                         <div class="input-group mb-1">
                             <span class="btn btn-white border border-dark text-center">Administrator</span>
-                            <button type="submit" value="Send" class="btn btn-white border border-dark">Logout</button>
+                            <button class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
@@ -46,93 +47,61 @@
 
         <hr />
 
-        <!--
-            @if (ViewBag.Success != null)
-                <div class="row">
-                    <div class="offset-md-4 col-md-4">
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            <strong>@ViewBag.Success</strong>
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    </div>
-                </div>
-            else if (ViewBag.Alert != null)
-                <div class="row d-flex justify-content-between">
-                    <div class="offset-md-4 col-md-4">
-                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                            <strong>@ViewBag.Alert</strong>
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    </div>
-                </div>
-        -->
-
         <div class="row justify-content-between">
             <div class="col-3">
-                <a class="btn btn-white border border-dark">Add Movie</a>
-                <a class="btn btn-white border border-dark ms-3">Back to List</a>
+                <button class="btn btn-white border border-dark" onclick="location.href='file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/movie/add.html'">Add Movie</button>
+                <button class="btn btn-white border border-dark ms-3" onclick="location.href='file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/movie/index.html'">Back to List</button>
             </div>
             <div class="col-4">
-                <form onsubmit="window.location = '/Movie/Search/?param=' + search.value; return false;">
+                <form action="javascript:void(0)" onsubmit="searchMovie()">
                     <div class="input-group mb-1">
-                        <input id="search" type="search" name="search" class="form-control border border-dark">
-                        <button type="submit" value="Send" class="btn btn-white border border-dark">Search</button>
+                        <input id="searchKeyword" type="search" class="form-control border border-dark">
+                        <button type="submit" class="btn btn-white border border-dark">Search</button>
                     </div>
                 </form>
             </div>
         </div>
 
-        <table class="table mt-5" id="table">
-            <tr class="text-center">
-                <th style="width: 15%;">Title</th>
-                <th style="width: 15%;">Director</th>
-                <th style="width: 30%;">Synopsis</th>
-                <th style="width: 15%;">Price</th>
-                <th style="width: 15%;">Poster</th>
-                <th style="width: 10%;">Action</th>
-            </tr>
-
-            <tr>
-              <th scope="row" colspan="6" class="text-center p-5">Loading...</th>
-            </tr>
-
-            <!--
+        <table class="table text-center mt-4">
+            <thead>
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Title)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Director)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => movie.Synopsis)
-                    </td>
-                    <td>
-                        @Html.ValueFor(modelItem => movie.Price)
-                    </td>
-                    <td>
-                        @if (!string.IsNullOrWhiteSpace(movie.PosterPath))
-                        {
-                            <img src="@Url.Content(movie.PosterPath)" style="width:200px; height:auto;" />
-                        }
-                    </td>
-                    <td>
-                        <div>
-                            <a class="btn btn-info mb-1" href="@Url.Action("Edit", "Movie", new { id = movie.Id })">
-                                <img src="~/Content/pencil-square.svg" alt="Edit" width="19" height="19">
-                            </a>
-                            <a class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?')" type="button" href="@Url.Action("Delete", "Movie", new { id = movie.Id, posterPath = movie.PosterPath })">
-                                <img src="~/Content/trash.svg" alt="Delete" width="19" height="19">
-                            </a>
+                    <th style="width: 15%;">Title</th>
+                    <th style="width: 15%;">Director</th>
+                    <th style="width: 30%;">Synopsis</th>
+                    <th style="width: 15%;">Price</th>
+                    <th style="width: 15%;">Poster</th>
+                    <th style="width: 10%;">Action</th>
+                </tr>
+            </thead>
+            <tbody id="tableData">
+                <tr>
+                    <th scope="row" colspan="6" class="text-center p-5">Loading...</th>
+                </tr>
+<!-- .
+                <tr> 
+                    <td class="cell-pt">Lorem Ipsum</td>
+                    <td class="cell-pt">Consectetur</td>
+                    <td class="cell-pt text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</td>
+                    <td class="cell-pt">Rp 5,000</td>
+                    <td><img style="width:150px; height:auto;" src="https://ae01.alicdn.com/kf/Hda510b54c6f143079a288919fa821cd3p/JAWS-VINTAGE-POSTER-Film-Kanvas-Cetakan-Seni-Dinding-untuk-Ruang-Tamu-Dekorasi-Kamar-Tidur.jpg_Q90.jpg_.webp"></td>
+                    <td class="container position-relative">
+                        <div class="col position-absolute top-50 start-50 translate-middle">
+                            <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="showUserEditBox(object['id'])">
+                                <img src="../../../resources/icons/pencil-square.svg" alt="Edit">
+                            </button>
+                            <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="userDelete(object['id'])">
+                                <img src="../../../resources/icons/trash.svg" alt="Delete">
+                            </button>
                         </div>
                     </td>
                 </tr>
-            -->
-
+. -->
+            </tbody>
         </table>
 
     </div>
 
-    <script src=""></script>
+    <script src="search.js"></script>
+    <script src="delete.js"></script>
 </body>
 </html>
