remove stupid bug

--- a/client/admin/movie/search.html
+++ b/client/admin/movie/search.html
@@ -73,7 +73,7 @@
                     <th style="width: 10%;">Action</th>
                 </tr>
             </thead>
-            <tbody id="tableData">
+            <tbody id="tableSearchData">
                 <tr>
                     <th scope="row" colspan="6" class="text-center p-5">Loading...</th>
                 </tr>
